<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.opentrafficsim</groupId>
    <artifactId>ots</artifactId>
    <version>1.7.5</version>
  </parent>

  <artifactId>ots-road</artifactId>
  <name>OpenTrafficSim road classes</name>
  <description>OpenTrafficSim road classes</description>

  <dependencies>

    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-core</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.opentrafficsim</groupId>
      <artifactId>ots-kpi</artifactId>
    </dependency>

    <dependency>
      <groupId>com.thoughtworks.xstream</groupId>
      <artifactId>xstream</artifactId>
    </dependency>

  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>